fix: add flex 1 to allow container to grow when the content is too big to fit in when the browser is resize

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
 .body {
     display: flex;
     flex-direction: column;
+    height: 100vh;
 }
 
 .content {
@@ -27,6 +28,8 @@
     background-color: #1F2937;
     display: flex;
     flex-direction: column;
+    flex:1;
+   
 }
 
 nav .nav-bar {
@@ -63,24 +66,30 @@ nav .nav-bar {
 
 .introduction {
     display: flex;
+    padding: 20px;
+    margin: 0;
+    min-height: 530px;
     justify-content: space-around;
     align-items: center;
 }
 .introduction .header {
-    height: 500px;
-    width: 500px;
-    margin-top: 100px;
+    height: 230px;
+    max-width: 500px;
+    margin: 0 auto;
+    flex: 1;
 }
 .introduction .header h1,
 .introduction .header p,
 .introduction .header button {
    margin-bottom: 15px;
+   min-width: 0;
 }
 .introduction .header h1{
     font-family: "Roboto", sans-serif;
     font-size: 48px;
     font-weight: 900;
     color: #F9FAF8;
+    min-width: 0;
 }
 
 .introduction .header button {
@@ -103,7 +112,7 @@ nav .nav-bar {
 .introduction img {
     height: 300px;
     width: 300px;
-    margin-bottom: 200px;
+    margin: 0 auto;
 }
 
 .second-page .second-page-header {
@@ -148,13 +157,14 @@ nav .nav-bar {
 .quote {
     height: 300px;
     padding: 25px;
-    margin: 40px 0;
+    margin: 50px 0;
     background-color: #E5E7EB;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 1em;
+    flex: 1;
 }
 
 .quote p {
@@ -168,11 +178,15 @@ nav .nav-bar {
     font-weight: bold;
     align-self: flex-end;
 }
-
+.main-sign-up {
+    display: flex;
+    flex: 0 1 auto;
+}
 .sign-up {
     margin: 50px auto;
     padding: 20px;
     height: 100px;
+    min-width: auto;
     width: 800px;
     border-radius: 5px;
     background-color: #3882F6;
@@ -181,12 +195,14 @@ nav .nav-bar {
     align-items: center;
     box-shadow: 5px 5px 5px lightgray;
     flex-wrap: wrap;
-    flex-grow: 1 1 auto;
+    
 }
 
 .sign-up .sign-up-message{
     color: #E5E7EB;
+    min-width: 0;
     font-family: "Roboto", sans-serif;
+    
 }
 
 .sign-up-message div {
@@ -221,3 +237,24 @@ footer div {
     font-family: "Roboto", sans-serif;
 }
 
+@media(max-width: 760px) {
+    .content .main-page .introduction{
+        display: flex;
+        flex-direction: column;
+        padding-top: 20px;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .introduction .header button {
+        margin: 0 auto;
+    }
+
+    
+    .sign-up {
+        display: flex;
+        flex-direction: column;
+        padding-top: 20px;
+    }
+}
